@@ -73,6 +73,7 @@ require 'lobbyist/workflow_system'
 require 'lobbyist/v2/base'
 require 'lobbyist/v2/authorization'
 require 'lobbyist/v2/category'
+require 'lobbyist/v2/company_metrics'
 require 'lobbyist/v2/company_setting'
 require 'lobbyist/v2/company_subscription'
 require 'lobbyist/v2/company_transaction'
@@ -84,6 +85,7 @@ require 'lobbyist/v2/customer'
 require 'lobbyist/v2/data_upload'
 require 'lobbyist/v2/email_invitation_metrics'
 require 'lobbyist/v2/email_invitation'
+require 'lobbyist/v2/enterprise_metrics'
 require 'lobbyist/v2/enterprise_setting'
 require 'lobbyist/v2/enterprise_user'
 require 'lobbyist/v2/enterprise'
