@@ -93,10 +93,6 @@ module Lobbyist
         create_from_response(put("/v2/companies/#{id}/reactivate.json", {'company' => {'account_terminated' => 'false', 'is_active' => 'true', 'termination_date' => nil}}))
       end
 
-      def self.metrics(id)
-        create_from_response(get("/v2/companies/#{id}/metrics.json"))
-      end
-    
       def self.scotty_info(id)
         create_from_response(get("/v2/companies/#{id}/scotty_info.json"))
       end
