@@ -1,3 +1,5 @@
+* Removed old metrics calls from Enterprise and Company.
+* Added Company and Enterprise Metrics proxy models.
 * Modified the way company subscription parameters are sent.
 * Added Promo proxy model for V2
 * Added Account Level proxy model for V2.
